--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0109
+    Beta 0.0.0110
   </div>
 
   <div class="mb-6">
@@ -110,11 +110,11 @@ const classificationData = {
 
 const classes = [
   "unrealistic - please check your time entry",
-  "require improvement - this time is too slow to classify",
-  "beginner - IFWL.NET Beginner series is ideal for you",
-  "AM - IFWL.NET Pro - am series is ideal for you",
+  "Beginner - keep practising and you'll soon be in the higher classification!.",
+  "beginner - IFWL.NET Beginner series is ideal for you - you are very close to the next classification",
+  "AM - IFWL.NET Pro - am series is ideal for you - look for small gains to be bumped up to the next classification",
   "high end - AM - IFWL.NET Pro - am series is ideal for you",
-  "Pro - IFWL.NET Pro am may suit your race pace",
+  "Pro - IFWL.NET Pro am may suit your race pace - keep your eyes peeld for IFWL.NET's new "pro" race series!",
   "Alien - consider getting a real race car ! :) "
 ];
 
