--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0111
+    Beta 0.0.0112
   </div>
 
   <div class="mb-6">
@@ -114,7 +114,7 @@ const classes = [
   "beginner - IFWL.NET Beginner series is ideal for you - you are very close to the next classification",
   "AM - IFWL.NET Pro - am series is ideal for you - look for small gains to be bumped up to the next classification",
   "high end - AM - IFWL.NET Pro - am series is ideal for you",
-  "Pro - IFWL.NET Pro am may suit your race pace - keep your eyes peeld for IFWL.NET's new pro race series!",
+  "Pro - IFWL.NET Pro am may suit your race pace - keep your eyes peeled for IFWL.NET's new pro race series!",
   "Alien - consider getting a real race car ! :) "
 ];
 
