--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0112
+    Beta 0.0.0113
   </div>
 
   <div class="mb-6">
@@ -68,7 +68,7 @@
       <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
     </form>
 
-    <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base. in ACC - when looking at times on "driver - stats, the top time is "hotlap" absolute best, the bottom one with a grey box is your race pace times. use race pace times."</p>
+    <p class="text-sm text-gray-600 mt-6">Note: These times are tailored for IFWL.NET, which uses LFM BOP. Other leagues may vary. In ACC, check "Driver > Stats" — the top time is your best hotlap, the grey-boxed bottom time is your race pace. Use race pace for accurate classification"</p>
 
     <div id="result" class="mt-4 text-lg font-semibold"></div>
 
