--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0113
+    Beta 0.0.0114
   </div>
 
   <div class="mb-6">
@@ -191,6 +191,19 @@ document.getElementById("classificationForm").addEventListener("submit", functio
     <span class="text-sm text-gray-600">${resultData.gapInfo}</span><br><br>
     <span class="text-sm text-blue-700 italic">${getRandomTip()}</span>
   `;
+
+  // 👉 Percentage feedback from Google Sheet
+  fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec")
+    .then(res => res.json())
+    .then(data => {
+      const classCount = data.classCounts[resultData.classification] || 0;
+      const percent = ((classCount / data.total) * 100).toFixed(1);
+      document.getElementById("result").innerHTML += `
+        <div class="text-sm text-gray-700 mt-2">
+          📊 ${percent}% of IFWL drivers fall into this category.
+        </div>
+      `;
+    });
 
   document.getElementById("simgridPromo").classList.remove("hidden");
 
