--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0115
+    Beta 0.0.0116
   </div>
 
   <div class="mb-6">
@@ -195,14 +195,14 @@ document.getElementById("classificationForm").addEventListener("submit", functio
   fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec")
     .then(res => res.json())
     .then(data => {
-      const classCount = data.classCounts[classification] || 0;
-      const percent = ((classCount / data.total) * 100).toFixed(1);
-      document.getElementById("result").innerHTML += `
-        <div class="text-sm text-gray-700 mt-2">
-          📊 ${percent}% of IFWL drivers fall into this category.
-        </div>
-      `;
-    });
+  const classCount = data.classCounts[classification] || 0;
+  const percent = ((classCount / data.total) * 100).toFixed(1);
+
+  document.getElementById("result").innerHTML += `
+    <div class="text-sm text-green-700 mt-2">You are faster than ${percent}% of drivers in your class.</div>
+    <div class="text-sm text-gray-700 mt-2">📊 ${percent}% of IFWL drivers fall into this category.</div>
+  `;
+});
 
 
   document.getElementById("simgridPromo").classList.remove("hidden");
