--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>IFWL ACC Driver Classifier</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center text-center">
+<body class="min-h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url('./ifwl_bg.png');">
+
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0117
+    Beta 0.0.0118
   </div>
 
   <div class="mb-6">
