--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>IFWL ACC Driver Classifier</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="min-h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url('./ifwl_bg.png');">
+<body class="min-h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url('./ifwl_bg.webp');">
 
 
   <!-- ✅ Version Number -->
