--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0118
+    Beta 0.0.0119
   </div>
 
   <div class="mb-6">
@@ -226,26 +226,15 @@ document.getElementById("bopNote").style.display = "none";
   });
 });
 
-function downloadCSV() {
-  const password = prompt("Enter password to download submissions:");
-  if (password !== "69420") {
-    alert("Incorrect password. Access denied.");
-    return;
-  }
+<div class="flex gap-4 mt-6 justify-center">
+  <a href="https://discord.gg/bBax4w29vS" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-xl shadow hover:bg-blue-700 transition">
+    Join the League
+  </a>
+  <a href="https://www.patreon.com/c/IFWL" target="_blank" class="bg-rose-600 text-white px-4 py-2 rounded-xl shadow hover:bg-rose-700 transition">
+    Support the League
+  </a>
+</div>
 
-  const headers = "Driver Name,Track,Car Class,Lap Time,Weather,Result\n";
-  const rows = submissionLog.map(entry =>
-    `${entry.name},${entry.track},${entry.carClass},${entry.lapTime},${entry.weather},${entry.result}`
-  ).join("\n");
-
-  const blob = new Blob([headers + rows], { type: "text/csv" });
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement("a");
-  a.href = url;
-  a.download = "ifwl_submissions.csv";
-  a.click();
-  URL.revokeObjectURL(url);
-}
 </script>
 </body>
 </html>
