--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0120
+    Beta 0.0.0121
   </div>
 
   <div class="mb-6">
@@ -79,19 +79,15 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
       </a>
     </div>
-  </div>
-
-  <button onclick="downloadCSV()" class="mt-4 bg-green-600 text-white p-2 rounded hover:bg-green-700">
-    Download Submissions CSV
-  </button>
-<div class="flex gap-4 mt-6 justify-center">
+  <div class="flex gap-4 mt-6 justify-center">
   <a href="https://discord.gg/bBax4w29vS" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-xl shadow hover:bg-blue-700 transition">
     Join the League
   </a>
-  <a href="https://www.patreon.com/c/IFWL" target="_blank" class="bg-rose-600 text-white px-4 py-2 rounded-xl shadow hover:bg-rose-700 transition">
+  <a href="https://www.patreon.com/c/IFWL" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded-xl shadow hover:bg-blue-700 transition">
     Support the League
   </a>
 </div>
+
 <script>
 const classificationData = {
   "Monza": { "GT3": ["1:53.7", "1:51.7", "1:49.7", "1:47.7", "1:45.7"] },
