--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0123
+    Beta 0.0.0124
   </div>
 <div id="leaderboard" class="bg-white shadow p-4 rounded-lg max-w-md mx-auto mt-6">
   <h2 class="text-xl font-bold mb-3">🏁 Most Submitted Tracks (Last 24h)</h2>
@@ -224,11 +224,17 @@ document.getElementById("bopNote").style.display = "none";
   body: JSON.stringify(entry),
   headers: { "Content-Type": "application/json" }
 })
-  .then(() => alert("✅ successfully updated."))
-  .catch(error => {
-    console.error("❌ Failed to save entry:", error);
-    alert("❌ Failed to save entry. check beta number and report via discord");
-  });
+.then(async (res) => {
+  if (!res.ok) {
+    const text = await res.text();
+    throw new Error(`Status ${res.status}: ${text}`);
+  }
+  alert("✅ successfully updated.");
+})
+.catch(error => {
+  console.error("❌ Failed to save entry:", error);
+  alert("❌ Failed to save entry. check beta number and report via discord");
+});
 });
   async function loadLeaderboard() {
     try {
