--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0124
+    Beta 0.0.0125
   </div>
 <div id="leaderboard" class="bg-white shadow p-4 rounded-lg max-w-md mx-auto mt-6">
   <h2 class="text-xl font-bold mb-3">🏁 Most Submitted Tracks (Last 24h)</h2>
@@ -216,25 +216,28 @@ document.getElementById("bopNote").style.display = "none";
 
   document.getElementById("simgridPromo").classList.remove("hidden");
 
-  const entry = { name, track, carClass, lapTime, weather, result: resultData.classification };
-  submissionLog.push(entry);
+  const formData = new URLSearchParams();
+formData.append("name", name);
+formData.append("track", track);
+formData.append("carClass", carClass);
+formData.append("lapTime", lapTime);
+formData.append("weather", weather);
+formData.append("result", resultData.classification);
 
-  fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
+submissionLog.push(Object.fromEntries(formData));
+
+fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
   method: "POST",
-  body: JSON.stringify(entry),
-  headers: { "Content-Type": "application/json" }
+  body: formData
 })
-.then(async (res) => {
-  if (!res.ok) {
-    const text = await res.text();
-    throw new Error(`Status ${res.status}: ${text}`);
-  }
+.then(() => {
   alert("✅ successfully updated.");
 })
 .catch(error => {
   console.error("❌ Failed to save entry:", error);
   alert("❌ Failed to save entry. check beta number and report via discord");
 });
+
 });
   async function loadLeaderboard() {
     try {
