--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0125
+    Beta 0.0.0126
   </div>
 <div id="leaderboard" class="bg-white shadow p-4 rounded-lg max-w-md mx-auto mt-6">
   <h2 class="text-xl font-bold mb-3">🏁 Most Submitted Tracks (Last 24h)</h2>
@@ -185,7 +185,7 @@ function classify(track, carClass, lapTime) {
 
 document.getElementById("classificationForm").addEventListener("submit", function (e) {
   e.preventDefault();
-document.getElementById("bopNote").style.display = "none";
+  document.getElementById("bopNote").style.display = "none";
   
   const name = document.getElementById("driverName").value.trim();
   const track = document.getElementById("track").value;
@@ -201,41 +201,36 @@ document.getElementById("bopNote").style.display = "none";
     <span class="text-sm text-gray-600">${resultData.gapInfo}</span><br><br>
     <span class="text-sm text-blue-700 italic">${getRandomTip()}</span>
   `;
+
   fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec")
     .then(res => res.json())
     .then(data => {
-  const classCount = data.classCounts[classification] || 0;
-  const percent = ((classCount / data.total) * 100).toFixed(1);
+      const classCount = data.classCounts[classification] || 0;
+      const percent = ((classCount / data.total) * 100).toFixed(1);
 
-  document.getElementById("result").innerHTML += `
-    <div class="text-sm text-green-700 mt-2">You are faster than ${percent}% of drivers in your class.</div>
-    <div class="text-sm text-gray-700 mt-2">📊 ${percent}% of IFWL drivers fall into this category.</div>
-  `;
-});
-
+      document.getElementById("result").innerHTML += `
+        <div class="text-sm text-green-700 mt-2">You are faster than ${percent}% of drivers in your class.</div>
+        <div class="text-sm text-gray-700 mt-2">📊 ${percent}% of IFWL drivers fall into this category.</div>
+      `;
+    });
 
   document.getElementById("simgridPromo").classList.remove("hidden");
 
   const formData = new URLSearchParams();
-formData.append("name", name);
-formData.append("track", track);
-formData.append("carClass", carClass);
-formData.append("lapTime", lapTime);
-formData.append("weather", weather);
-formData.append("result", resultData.classification);
+  formData.append("name", name);
+  formData.append("track", track);
+  formData.append("carClass", carClass);
+  formData.append("lapTime", lapTime);
+  formData.append("weather", weather);
+  formData.append("result", resultData.classification);
 
-submissionLog.push(Object.fromEntries(formData));
+  submissionLog.push(Object.fromEntries(formData));
 
-fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
-  method: "POST",
-  body: formData
-})
-.then(() => {
-  alert("✅ successfully updated.");
-})
-.catch(error => {
-  console.error("❌ Failed to save entry:", error);
-  alert("❌ Failed to save entry. check beta number and report via discord");
+  fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
+    method: "POST",
+    mode: "no-cors",
+    body: formData
+  });
 });
 
 });
