--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0129
+    Beta 0.0.0130
   </div>
 <div id="leaderboard" class="bg-white shadow p-4 rounded-lg max-w-md mx-auto mt-6">
   <h2 class="text-xl font-bold mb-3">🏁 Most Submitted Tracks (Last 24h)</h2>
@@ -234,33 +234,37 @@ document.getElementById("classificationForm").addEventListener("submit", functio
 });
 
 
-      const res = await fetch('https://corsproxy.io/?https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec');
+      async function loadLeaderboard() {
+  try {
+    const res = await fetch('https://corsproxy.io/?https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec');
+    const data = await res.json();
 
-      const data = await res.json();
+    const topTracks = data.topTracks || [];
+    const listEl = document.getElementById('trackList');
 
-      const topTracks = data.topTracks || [];
-      const listEl = document.getElementById('trackList');
-
-      if (topTracks.length === 0) {
-        listEl.innerHTML = '<li class="text-gray-500">No recent submissions.</li>';
-        return;
-      }
-
-      listEl.innerHTML = '';
-      topTracks.forEach((entry, i) => {
-        const item = document.createElement('li');
-        item.className = "flex justify-between items-center bg-gray-100 rounded px-3 py-2";
-        item.innerHTML = `
-          <span class="font-medium">${i + 1}. ${entry.track}</span>
-          <span class="text-sm text-gray-600">${entry.count} submission${entry.count !== 1 ? 's' : ''}</span>
-        `;
-        listEl.appendChild(item);
-      });
-    } catch (err) {
-      console.error('Leaderboard fetch error:', err);
-      document.getElementById('trackList').innerHTML = '<li class="text-red-500">Error loading leaderboard.</li>';
+    if (topTracks.length === 0) {
+      listEl.innerHTML = '<li class="text-gray-500">No recent submissions.</li>';
+      return;
     }
+
+    listEl.innerHTML = '';
+    topTracks.forEach((entry, i) => {
+      const item = document.createElement('li');
+      item.className = "flex justify-between items-center bg-gray-100 rounded px-3 py-2";
+      item.innerHTML = `
+        <span class="font-medium">${i + 1}. ${entry.track}</span>
+        <span class="text-sm text-gray-600">${entry.count} submission${entry.count !== 1 ? 's' : ''}</span>
+      `;
+      listEl.appendChild(item);
+    });
+  } catch (err) {
+    console.error('Leaderboard fetch error:', err);
+    document.getElementById('trackList').innerHTML = '<li class="text-red-500">Error loading leaderboard.</li>';
   }
+}
+
+loadLeaderboard(); // 👈 make sure to call it here
+
 </script>
 </body>
 </html>
