--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0132
+    Beta 0.0.0133
   </div>
 <div id="leaderboard" class="bg-white shadow p-4 rounded-lg max-w-md mx-auto mt-6">
   <h2 class="text-xl font-bold mb-3">🏁 Most Submitted Tracks (Last 24h)</h2>
@@ -227,10 +227,11 @@ document.getElementById("classificationForm").addEventListener("submit", functio
   submissionLog.push(Object.fromEntries(formData));
 
   fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
-    method: "POST",
-    mode: "no-cors",
-    body: formData
-  });
+  method: "POST",
+  body: formData
+})
+.then(() => console.log("✅ Submission logged successfully."))
+.catch(err => console.error("❌ Submission error:", err));
 });
 
 
