--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0134
+    Beta 0.0.0135
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -224,11 +224,14 @@ document.getElementById("classificationForm").addEventListener("submit", functio
 
   fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
   method: "POST",
+  mode: "no-cors",
   body: formData
-})
-.then(() => console.log("✅ Submission logged successfully."))
-.catch(err => console.error("❌ Submission error:", err));
 });
+
+document.getElementById("result").innerHTML += `
+  <div class="text-green-600 text-sm mt-2">✅ Your submission was sent to IFWL.</div>
+`;
+
 </script>
 </body>
 </html>
