--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0140
+    Beta 0.0.0141
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -202,45 +202,45 @@ document.getElementById("classificationForm").addEventListener("submit", functio
 
   document.getElementById("simgridPromo").classList.remove("hidden");
 
+  document.getElementById("classificationForm").addEventListener("submit", function (e) {
+  e.preventDefault();
+  document.getElementById("bopNote").style.display = "none";
+  
+  const name = document.getElementById("driverName").value.trim();
+  const track = document.getElementById("track").value;
+  const carClass = document.getElementById("carClass").value;
+  const lapTime = document.getElementById("lapTime").value.trim();
+  const weather = document.getElementById("weather").value;
+
+  const resultData = classify(track, carClass, lapTime);
+  const classification = resultData.classification;
+
+  document.getElementById("result").innerHTML = `
+    ${name}, your classification is:<br><strong>${resultData.classification}</strong><br>
+    <span class="text-sm text-gray-600">${resultData.gapInfo}</span><br><br>
+    <span class="text-sm text-blue-700 italic">${getRandomTip()}</span>
+  `;
+
+  document.getElementById("simgridPromo").classList.remove("hidden");
+
   const formData = new URLSearchParams();
-formData.append("name", name);
-formData.append("track", track);
-formData.append("carClass", carClass);
-formData.append("lapTime", lapTime);
-formData.append("weather", weather);
-formData.append("result", resultData.classification);
+  formData.append("name", name);
+  formData.append("track", track);
+  formData.append("carClass", carClass);
+  formData.append("lapTime", lapTime);
+  formData.append("weather", weather);
+  formData.append("result", resultData.classification);
 
-// ✅ You can keep logging it if useful
-submissionLog.push(Object.fromEntries(formData));
+  submissionLog.push(Object.fromEntries(formData));
 
-// ✅ This version ensures Google Apps Script reads it correctly
-fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
-  method: "POST",
-  mode: "no-cors",
-  headers: {
-    "Content-Type": "application/x-www-form-urlencoded"
-  },
-  body: formData.toString()
-});const formData = new URLSearchParams();
-formData.append("name", name);
-formData.append("track", track);
-formData.append("carClass", carClass);
-formData.append("lapTime", lapTime);
-formData.append("weather", weather);
-formData.append("result", resultData.classification);
-
-// ✅ You can keep logging it if useful
-submissionLog.push(Object.fromEntries(formData));
-
-// ✅ This version ensures Google Apps Script reads it correctly
-fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
-  method: "POST",
-  mode: "no-cors",
-  headers: {
-    "Content-Type": "application/x-www-form-urlencoded"
-  },
-  body: formData.toString()
-});
+  fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
+    method: "POST",
+    mode: "no-cors",
+    headers: {
+      "Content-Type": "application/x-www-form-urlencoded"
+    },
+    body: formData.toString()
+  });
 //
 });  
 </script>
