--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0147
+    Beta 0.0.0148
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -200,32 +200,21 @@ document.getElementById("classificationForm").addEventListener("submit", functio
 
   document.getElementById("simgridPromo").classList.remove("hidden");
 
-  const formData = {
-  name: name,
-  track: track,
-  carClass: carClass,
-  lapTime: lapTime,
-  weather: weather,
-  result: resultData.classification
-};
+const formData = new URLSearchParams();
+formData.append("name", name);
+formData.append("track", track);
+formData.append("carClass", carClass);
+formData.append("lapTime", lapTime);
+formData.append("weather", weather);
+formData.append("result", resultData.classification);
 
 fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
   method: "POST",
+  mode: "no-cors", // Important
   headers: {
     "Content-Type": "application/x-www-form-urlencoded"
   },
-  body: new URLSearchParams(formData)
-})
-.then(res => res.json())
-.then(data => {
-  if (data.success) {
-    document.getElementById("result").innerHTML += `<div class="text-green-600 text-sm mt-2">✅ Submission sent to IFWL!</div>`;
-  } else {
-    document.getElementById("result").innerHTML += `<div class="text-red-600 text-sm mt-2">❌ Submission failed: ${data.message}</div>`;
-  }
-})
-.catch(err => {
-  document.getElementById("result").innerHTML += `<div class="text-red-600 text-sm mt-2">❌ Network error: ${err.message}</div>`;
+  body: formData.toString()
 });
 });
 
