--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0148
+    Beta 0.0.0150
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -210,7 +210,7 @@ formData.append("result", resultData.classification);
 
 fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
   method: "POST",
-  mode: "no-cors", // Important
+  mode: "no-cors", // important for GitHub Pages
   headers: {
     "Content-Type": "application/x-www-form-urlencoded"
   },
