--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0151
+    Beta 0.0.0152
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -20,7 +20,27 @@
   </div>
 
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
-    <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
+
+  <!-- 🔗 Sponsor & Affiliates Moved Up -->
+  <div class="mb-6 text-center">
+    <h2 class="text-sm text-gray-500 mb-2">Sponsored by</h2>
+    <div class="flex justify-center gap-4 flex-wrap items-center">
+      <a href="https://www.g-portal.com/en?ref=ifwl" target="_blank" title="G-Portal (Main Sponsor)">
+        <img src="./use_this_simgrid.png" alt="G-Portal" class="h-10 md:h-12 object-contain hover:scale-105 transition" />
+      </a>
+      <a href="https://www.fanatec.com/eu/en?utm_medium=FAP%20Banner&utm_source=IFWL&utm_campaign=General%20Links&a_aid=IFWL" target="_blank" title="Fanatec Affiliate">
+        <img src="./fanatec.png" alt="Fanatec" class="h-10 md:h-12 object-contain hover:scale-105 transition" />
+      </a>
+      <a href="https://www.cdkeys.com/?irclickid=WjSVYp0TKxyKRityly0JazM8UksUvt0O5Syr3k0&utm_source=impact&utm_medium=affiliate&utm_campaign=IFWL.NET&utm_id=5473508&irgwc=1" target="_blank" title="CDKeys Affiliate">
+        <img src="./cdkeys.png" alt="CDKeys" class="h-10 md:h-12 object-contain hover:scale-105 transition" />
+      </a>
+      <a href="https://mozaracing.com/?ref=IFWL" target="_blank" title="Moza Racing Affiliate">
+        <img src="./moza.png" alt="Moza Racing" class="h-10 md:h-12 object-contain hover:scale-105 transition" />
+      </a>
+    </div>
+  </div>
+
+  <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
     <form id="classificationForm" class="space-y-4">
       <input type="text" id="driverName" placeholder="Driver Name" class="w-full p-2 border rounded" required />
 
