--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- ✅ Version Number -->
   <div class="fixed top-2 left-2 text-xs text-gray-500 font-mono bg-white bg-opacity-80 px-2 py-1 rounded shadow">
-    Beta 0.0.0153
+    Beta 0.0.0154
   </div>
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
@@ -143,10 +143,15 @@ const classes = [
 
 const tips = [
   "🏁 Tip: Focus on smooth throttle and brake inputs to maintain car balance through corners.",
+  "ℹ️ Fun Facts: IFWL.NET website has had over 500,000 page hits in the last 12 months.",
   "🧠 Tip: Learn your braking points and slowly push them deeper as you gain confidence.",
+  "ℹ️ Fun Facts: IFWL offers tailored training to members who wish to join the operations team",
   "🎯 Tip: Consistency is key – aim for clean laps before chasing ultimate pace.",
+  "ℹ️ Fun Facts: IFWL has over £3000 in yearly outgoings. 1/3 of that was winnings to players",
   "🔍 Tip: Use your track map and replays to spot where you're losing time.",
-  "🛞 Tip: Trail braking helps rotate the car – practice easing off the brake into the apex."
+  "ℹ️ Fun Facts: IFWL was the first league in the UK to establish affiliations with 3 big name gaming suppliers",
+  "🛞 Tip: Trail braking helps rotate the car – practice easing off the brake into the apex.",
+  "ℹ️ Fun Facts: IFWL was started by 3 lads in 2022 when other leagues refused to race on weekends."
 ];
 
 function getRandomTip() {
