--- a/leaderboard.html
+++ b/leaderboard.html
@@ -45,6 +45,61 @@
 
     let allData = [];
 
+const carMap = {
+  0: "AMR V8 Vantage",
+  1: "Audi R8 LMS (2015)",
+  2: "BMW M6 GT3",
+  3: "Bentley Continental GT3 (2015)",
+  4: "Bentley Continental GT3 (2018)",
+  5: "Jaguar G3",
+  6: "Lamborghini Huracán GT3",
+  7: "McLaren 650S GT3",
+  8: "Mercedes-AMG GT3",
+  9: "Nissan GT-R Nismo GT3 (2015)",
+  10: "Porsche 911 GT3 R (2018)",
+  11: "Reiter Engineering R-EX GT3",
+  12: "Honda NSX GT3",
+  13: "Lexus RC F GT3",
+  14: "Lamborghini Huracán GT3 Evo",
+  15: "Honda NSX GT3 Evo",
+  16: "McLaren 720S GT3",
+  17: "Audi R8 LMS Evo",
+  18: "Ferrari 488 GT3",
+  19: "Ferrari 488 GT3 Evo 2020",
+  20: "Porsche 991 II GT3 R",
+  21: "Lamborghini Huracán Super Trofeo",
+  22: "Audi R8 LMS GT4",
+  23: "BMW M4 GT4",
+  24: "Chevrolet Camaro GT4",
+  25: "Ginetta G55 GT4",
+  26: "KTM X-Bow GT4",
+  27: "Maserati GranTurismo MC GT4",
+  28: "McLaren 570S GT4",
+  29: "Mercedes-AMG GT4",
+  30: "Porsche 718 Cayman GT4",
+  31: "Alpine A110 GT4",
+  32: "BMW M2 CS Racing",
+  50: "Porsche 991 GT3 Cup",
+  51: "Porsche 992 GT3 Cup",
+  60: "Lamborghini Huracán Super Trofeo Evo2",
+  61: "Ferrari 296 GT3",
+  62: "Porsche 992 GT3 R",
+  63: "McLaren 720S GT3 Evo",
+  64: "Mercedes-AMG GT3 Evo (2020)",
+  65: "Audi R8 LMS Evo II",
+  66: "Lamborghini Huracán GT3 Evo2",
+  67: "BMW M4 GT3",
+  68: "Aston Martin Vantage V8 Evo",
+  69: "McLaren Artura GT4",
+  70: "Alpine A110 GT4 Evo",
+  71: "Mercedes-AMG GT2",
+  72: "Porsche 935",
+  73: "Maserati MC20 GT2",
+  74: "Audi R8 LMS GT2",
+  75: "KTM X-Bow GT2"
+};
+
+
     async function loadData() {
       const res = await fetch(API_URL);
       const text = await res.text();
@@ -96,7 +151,7 @@
         row.forEach((cell, i) => {
           if (i > 0) {
             const td = document.createElement("td");
-            td.textContent = cell;
+            td.textContent = (i === 3 && carMap[cell]) ? carMap[cell] : cell;
             td.className = "px-4 py-2";
             tr.appendChild(td);
           }
