--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,9 +7,21 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-900 p-4">
-  <div class="max-w-6xl mx-auto">
-    <h1 class="text-3xl font-bold mb-4">🏁 IFWL Live Leaderboard</h1>
 
+  <!-- Version Badge -->
+  <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
+    Beta 0.0.05
+  </div>
+
+  <div class="max-w-6xl mx-auto">
+
+    <!-- IFWL Logo and Header -->
+    <div class="flex items-center justify-between mb-6">
+      <img src="ifwl_logo.png" alt="IFWL Logo" class="h-12">
+      <h1 class="text-3xl font-bold">IFWL Live Leaderboard</h1>
+    </div>
+
+    <!-- Track and Driver Filters -->
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-6">
       <div>
         <label class="block mb-1 font-medium">Select Track:</label>
@@ -21,6 +33,7 @@
       </div>
     </div>
 
+    <!-- Results Table -->
     <div class="overflow-x-auto">
       <table class="min-w-full bg-white rounded shadow-md overflow-hidden">
         <thead class="bg-gray-200">
@@ -36,69 +49,79 @@
         <tbody id="resultsTable" class="divide-y divide-gray-100"></tbody>
       </table>
     </div>
+
+    <!-- Sponsor Logos -->
+    <div class="mt-12 text-center">
+      <h2 class="text-lg font-semibold mb-2">Proudly Sponsored By</h2>
+      <div class="flex justify-center flex-wrap gap-6">
+        <img src="use_this_simgird.png" alt="G-Portal" class="h-10">
+        <img src="fanatec.png" alt="Fanatec" class="h-10">
+        <img src="cdkeys.png" alt="CDKeys" class="h-10">
+        <img src="moza.png" alt="Moza Racing" class="h-10">
+      </div>
+    </div>
   </div>
 
   <script>
     const SHEET_ID = "1i5qJ0GaRp_tGUb0rzXUBzGq0RowtbQSVDjAyNASyh4g";
     const SHEET_NAME = "Results";
     const API_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${SHEET_NAME}`;
+    
+    const carMap = {
+      0: "AMR V8 Vantage",
+      1: "Audi R8 LMS (2015)",
+      2: "BMW M6 GT3",
+      3: "Bentley Continental GT3 (2015)",
+      4: "Bentley Continental GT3 (2018)",
+      5: "Jaguar G3",
+      6: "Lamborghini Huracán GT3",
+      7: "McLaren 650S GT3",
+      8: "Mercedes-AMG GT3",
+      9: "Nissan GT-R Nismo GT3 (2015)",
+      10: "Porsche 911 GT3 R (2018)",
+      11: "Reiter Engineering R-EX GT3",
+      12: "Honda NSX GT3",
+      13: "Lexus RC F GT3",
+      14: "Lamborghini Huracán GT3 Evo",
+      15: "Honda NSX GT3 Evo",
+      16: "McLaren 720S GT3",
+      17: "Audi R8 LMS Evo",
+      18: "Ferrari 488 GT3",
+      19: "Ferrari 488 GT3 Evo 2020",
+      20: "Porsche 991 II GT3 R",
+      21: "Lamborghini Huracán Super Trofeo",
+      22: "Audi R8 LMS GT4",
+      23: "BMW M4 GT4",
+      24: "Chevrolet Camaro GT4",
+      25: "Ginetta G55 GT4",
+      26: "KTM X-Bow GT4",
+      27: "Maserati GranTurismo MC GT4",
+      28: "McLaren 570S GT4",
+      29: "Mercedes-AMG GT4",
+      30: "Porsche 718 Cayman GT4",
+      31: "Alpine A110 GT4",
+      32: "BMW M2 CS Racing",
+      50: "Porsche 991 GT3 Cup",
+      51: "Porsche 992 GT3 Cup",
+      60: "Lamborghini Huracán Super Trofeo Evo2",
+      61: "Ferrari 296 GT3",
+      62: "Porsche 992 GT3 R",
+      63: "McLaren 720S GT3 Evo",
+      64: "Mercedes-AMG GT3 Evo (2020)",
+      65: "Audi R8 LMS Evo II",
+      66: "Lamborghini Huracán GT3 Evo2",
+      67: "BMW M4 GT3",
+      68: "Aston Martin Vantage V8 Evo",
+      69: "McLaren Artura GT4",
+      70: "Alpine A110 GT4 Evo",
+      71: "Mercedes-AMG GT2",
+      72: "Porsche 935",
+      73: "Maserati MC20 GT2",
+      74: "Audi R8 LMS GT2",
+      75: "KTM X-Bow GT2"
+    };
 
     let allData = [];
-
-const carMap = {
-  0: "AMR V8 Vantage",
-  1: "Audi R8 LMS (2015)",
-  2: "BMW M6 GT3",
-  3: "Bentley Continental GT3 (2015)",
-  4: "Bentley Continental GT3 (2018)",
-  5: "Jaguar G3",
-  6: "Lamborghini Huracán GT3",
-  7: "McLaren 650S GT3",
-  8: "Mercedes-AMG GT3",
-  9: "Nissan GT-R Nismo GT3 (2015)",
-  10: "Porsche 911 GT3 R (2018)",
-  11: "Reiter Engineering R-EX GT3",
-  12: "Honda NSX GT3",
-  13: "Lexus RC F GT3",
-  14: "Lamborghini Huracán GT3 Evo",
-  15: "Honda NSX GT3 Evo",
-  16: "McLaren 720S GT3",
-  17: "Audi R8 LMS Evo",
-  18: "Ferrari 488 GT3",
-  19: "Ferrari 488 GT3 Evo 2020",
-  20: "Porsche 991 II GT3 R",
-  21: "Lamborghini Huracán Super Trofeo",
-  22: "Audi R8 LMS GT4",
-  23: "BMW M4 GT4",
-  24: "Chevrolet Camaro GT4",
-  25: "Ginetta G55 GT4",
-  26: "KTM X-Bow GT4",
-  27: "Maserati GranTurismo MC GT4",
-  28: "McLaren 570S GT4",
-  29: "Mercedes-AMG GT4",
-  30: "Porsche 718 Cayman GT4",
-  31: "Alpine A110 GT4",
-  32: "BMW M2 CS Racing",
-  50: "Porsche 991 GT3 Cup",
-  51: "Porsche 992 GT3 Cup",
-  60: "Lamborghini Huracán Super Trofeo Evo2",
-  61: "Ferrari 296 GT3",
-  62: "Porsche 992 GT3 R",
-  63: "McLaren 720S GT3 Evo",
-  64: "Mercedes-AMG GT3 Evo (2020)",
-  65: "Audi R8 LMS Evo II",
-  66: "Lamborghini Huracán GT3 Evo2",
-  67: "BMW M4 GT3",
-  68: "Aston Martin Vantage V8 Evo",
-  69: "McLaren Artura GT4",
-  70: "Alpine A110 GT4 Evo",
-  71: "Mercedes-AMG GT2",
-  72: "Porsche 935",
-  73: "Maserati MC20 GT2",
-  74: "Audi R8 LMS GT2",
-  75: "KTM X-Bow GT2"
-};
-
 
     async function loadData() {
       const res = await fetch(API_URL);
