--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,11 +6,11 @@
   <title>IFWL Leaderboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900 p-4">
+<body class="text-gray-900 p-4" style="background: url('ifwl_bg.webp') no-repeat center center fixed; background-size: cover;">
 
   <!-- Version Badge -->
   <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
-    Beta 0.0.05
+    Beta 0.0.06
   </div>
 
   <div class="max-w-6xl mx-auto">
@@ -19,6 +19,13 @@
     <div class="flex items-center justify-between mb-6">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-12">
       <h1 class="text-3xl font-bold">IFWL Live Leaderboard</h1>
+    </div>
+
+    <!-- Home Button -->
+    <div class="mb-4">
+      <a href="index.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow">
+        ← Home
+      </a>
     </div>
 
     <!-- Track and Driver Filters -->
@@ -54,7 +61,7 @@
     <div class="mt-12 text-center">
       <h2 class="text-lg font-semibold mb-2">Proudly Sponsored By</h2>
       <div class="flex justify-center flex-wrap gap-6">
-        <img src="use_this_simgird.png" alt="G-Portal" class="h-10">
+        <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
         <img src="fanatec.png" alt="Fanatec" class="h-10">
         <img src="cdkeys.png" alt="CDKeys" class="h-10">
         <img src="moza.png" alt="Moza Racing" class="h-10">
@@ -66,58 +73,22 @@
     const SHEET_ID = "1i5qJ0GaRp_tGUb0rzXUBzGq0RowtbQSVDjAyNASyh4g";
     const SHEET_NAME = "Results";
     const API_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${SHEET_NAME}`;
-    
+
     const carMap = {
-      0: "AMR V8 Vantage",
-      1: "Audi R8 LMS (2015)",
-      2: "BMW M6 GT3",
-      3: "Bentley Continental GT3 (2015)",
-      4: "Bentley Continental GT3 (2018)",
-      5: "Jaguar G3",
-      6: "Lamborghini Huracán GT3",
-      7: "McLaren 650S GT3",
-      8: "Mercedes-AMG GT3",
-      9: "Nissan GT-R Nismo GT3 (2015)",
-      10: "Porsche 911 GT3 R (2018)",
-      11: "Reiter Engineering R-EX GT3",
-      12: "Honda NSX GT3",
-      13: "Lexus RC F GT3",
-      14: "Lamborghini Huracán GT3 Evo",
-      15: "Honda NSX GT3 Evo",
-      16: "McLaren 720S GT3",
-      17: "Audi R8 LMS Evo",
-      18: "Ferrari 488 GT3",
-      19: "Ferrari 488 GT3 Evo 2020",
-      20: "Porsche 991 II GT3 R",
-      21: "Lamborghini Huracán Super Trofeo",
-      22: "Audi R8 LMS GT4",
-      23: "BMW M4 GT4",
-      24: "Chevrolet Camaro GT4",
-      25: "Ginetta G55 GT4",
-      26: "KTM X-Bow GT4",
-      27: "Maserati GranTurismo MC GT4",
-      28: "McLaren 570S GT4",
-      29: "Mercedes-AMG GT4",
-      30: "Porsche 718 Cayman GT4",
-      31: "Alpine A110 GT4",
-      32: "BMW M2 CS Racing",
-      50: "Porsche 991 GT3 Cup",
-      51: "Porsche 992 GT3 Cup",
-      60: "Lamborghini Huracán Super Trofeo Evo2",
-      61: "Ferrari 296 GT3",
-      62: "Porsche 992 GT3 R",
-      63: "McLaren 720S GT3 Evo",
-      64: "Mercedes-AMG GT3 Evo (2020)",
-      65: "Audi R8 LMS Evo II",
-      66: "Lamborghini Huracán GT3 Evo2",
-      67: "BMW M4 GT3",
-      68: "Aston Martin Vantage V8 Evo",
-      69: "McLaren Artura GT4",
-      70: "Alpine A110 GT4 Evo",
-      71: "Mercedes-AMG GT2",
-      72: "Porsche 935",
-      73: "Maserati MC20 GT2",
-      74: "Audi R8 LMS GT2",
+      0: "AMR V8 Vantage", 1: "Audi R8 LMS (2015)", 2: "BMW M6 GT3", 3: "Bentley Continental GT3 (2015)",
+      4: "Bentley Continental GT3 (2018)", 5: "Jaguar G3", 6: "Lamborghini Huracán GT3", 7: "McLaren 650S GT3",
+      8: "Mercedes-AMG GT3", 9: "Nissan GT-R Nismo GT3 (2015)", 10: "Porsche 911 GT3 R (2018)",
+      11: "Reiter Engineering R-EX GT3", 12: "Honda NSX GT3", 13: "Lexus RC F GT3", 14: "Lamborghini Huracán GT3 Evo",
+      15: "Honda NSX GT3 Evo", 16: "McLaren 720S GT3", 17: "Audi R8 LMS Evo", 18: "Ferrari 488 GT3",
+      19: "Ferrari 488 GT3 Evo 2020", 20: "Porsche 991 II GT3 R", 21: "Lamborghini Huracán Super Trofeo",
+      22: "Audi R8 LMS GT4", 23: "BMW M4 GT4", 24: "Chevrolet Camaro GT4", 25: "Ginetta G55 GT4",
+      26: "KTM X-Bow GT4", 27: "Maserati GranTurismo MC GT4", 28: "McLaren 570S GT4", 29: "Mercedes-AMG GT4",
+      30: "Porsche 718 Cayman GT4", 31: "Alpine A110 GT4", 32: "BMW M2 CS Racing", 50: "Porsche 991 GT3 Cup",
+      51: "Porsche 992 GT3 Cup", 60: "Lamborghini Huracán Super Trofeo Evo2", 61: "Ferrari 296 GT3",
+      62: "Porsche 992 GT3 R", 63: "McLaren 720S GT3 Evo", 64: "Mercedes-AMG GT3 Evo (2020)",
+      65: "Audi R8 LMS Evo II", 66: "Lamborghini Huracán GT3 Evo2", 67: "BMW M4 GT3",
+      68: "Aston Martin Vantage V8 Evo", 69: "McLaren Artura GT4", 70: "Alpine A110 GT4 Evo",
+      71: "Mercedes-AMG GT2", 72: "Porsche 935", 73: "Maserati MC20 GT2", 74: "Audi R8 LMS GT2",
       75: "KTM X-Bow GT2"
     };
 
