--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,7 +10,7 @@
 
   <!-- Version Badge -->
   <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
-    Beta 0.0.06
+    Beta 0.0.07
   </div>
 
   <div class="max-w-6xl mx-auto">
@@ -23,7 +23,7 @@
 
     <!-- Home Button -->
     <div class="mb-4">
-      <a href="index.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow">
+      <a href="leaderboard.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow">
         ← Home
       </a>
     </div>
