--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,7 +10,7 @@
 
   <!-- Version Badge -->
   <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
-    Beta 0.0.07
+    Beta 0.0.08
   </div>
 
   <div class="max-w-6xl mx-auto">
@@ -18,7 +18,7 @@
     <!-- IFWL Logo and Header -->
     <div class="flex items-center justify-between mb-6">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-12">
-      <h1 class="text-3xl font-bold">IFWL Live Leaderboard</h1>
+      <h1 class="text-3xl font-bold">IFWL.NET Console Beginner server live timings</h1>
     </div>
 
     <!-- Home Button -->
