--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,28 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IFWL ACC Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="text-gray-900 bg-cover bg-center" style="background-image: url('ifwl_bg.webp');">
+<body class="bg-gray-100 text-gray-900">
 
-  <!-- Version Badge -->
-  <div class="fixed top-2 left-2 text-xs bg-white text-gray-800 px-3 py-1 rounded shadow font-mono z-50">
-    Beta 0.0.01 - IFWL ACC Dashboard
+  <!-- Sticky Nav -->
+  <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
+    <div class="flex items-center gap-4">
+      <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.02</span>
+    </div>
+    <div class="flex gap-2">
+      <button onclick="scrollToSection('classifier')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Classifier</button>
+      <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Leaderboard</button>
+      <button onclick="toggleStatus()" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Server Status</button>
+    </div>
   </div>
 
-  <!-- IFWL Logo -->
-  <div class="flex justify-center mt-4 mb-6">
-    <img src="ifwl_logo.png" alt="IFWL Logo" class="h-24">
-  </div>
-
-  <!-- Navigation Buttons -->
-  <div class="flex justify-center gap-4 mb-8">
-    <button onclick="scrollToSection('classifierSection')" class="bg-blue-600 text-white px-4 py-2 rounded shadow hover:bg-blue-700 transition">Classifier</button>
-    <button onclick="scrollToSection('leaderboardSection')" class="bg-blue-600 text-white px-4 py-2 rounded shadow hover:bg-blue-700 transition">Leaderboard</button>
-  </div>
-
-  <!-- Main Sections -->
-  <div id="classifierSection" class="px-4">
+  <!-- Main Content -->
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 max-w-7xl mx-auto mt-6 px-4">
+    <!-- Classifier -->
+    <div id="classifier" class="bg-white rounded-2xl shadow p-6 overflow-auto">
+      <h2 class="text-xl font-bold mb-4">ACC Driver Classification</h2>
+      <!-- INSERT CLASSIFIER BODY -->
+      
 
 
   <!-- ✅ Version Number -->
@@ -268,11 +270,14 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 });
 
 </script>
-</div>
 
-  <hr class="my-12 border-gray-400">
+    </div>
 
-  <div id="leaderboardSection" class="px-4">
+    <!-- Leaderboard -->
+    <div id="leaderboard" class="bg-white rounded-2xl shadow p-6 overflow-auto">
+      <h2 class="text-xl font-bold mb-4">Live Leaderboard</h2>
+      <!-- INSERT LEADERBOARD BODY -->
+      
 
   <!-- Version Badge -->
   <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
@@ -422,10 +427,20 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 
     loadData();
   </script>
-</div>
 
-  <!-- Sponsor Logos (reused from index.html) -->
-  <div class="mt-12 text-center">
+    </div>
+  </div>
+
+  <!-- Server Status Toggle -->
+  <div class="max-w-7xl mx-auto mt-6 px-4 hidden" id="serverStatusPanel">
+    <div class="bg-white rounded-2xl shadow p-4">
+      <h2 class="text-lg font-bold mb-2">Live ACC Server Status</h2>
+      <iframe src="https://acc-status.jonatan.net" class="w-full h-[600px] rounded" loading="lazy"></iframe>
+    </div>
+  </div>
+
+  <!-- Sponsors -->
+  <div class="mt-12 text-center px-4">
     <h2 class="text-lg font-semibold mb-2">Proudly Sponsored By</h2>
     <div class="flex justify-center flex-wrap gap-6">
       <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
@@ -435,13 +450,18 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
   </div>
 
+  <!-- Scripts -->
   <script>
     function scrollToSection(id) {
       document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
     }
+    function toggleStatus() {
+      const panel = document.getElementById("serverStatusPanel");
+      panel.classList.toggle("hidden");
+    }
   </script>
 
-  <!-- Embedded Scripts -->
+  <!-- INSERT JS -->
   <script>
 const classificationData = {
   "Monza": { "GT3": ["1:53.7", "1:51.7", "1:49.7", "1:47.7", "1:45.7"] },
@@ -584,7 +604,7 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 });
 
 </script>
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 <script>
     const SHEET_ID = "1i5qJ0GaRp_tGUb0rzXUBzGq0RowtbQSVDjAyNASyh4g";
     const SHEET_NAME = "Results";
@@ -672,17 +692,6 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
 
     loadData();
   </script>
-
-
-<hr class="my-12 border-gray-400">
-
-<!-- ACC Server Status -->
-<div id="serverStatusSection" class="px-4 mt-12">
-  <h2 class="text-2xl font-bold text-center mb-4">Live ACC Server Status</h2>
-  <div class="max-w-6xl mx-auto border rounded-lg overflow-hidden shadow-lg">
-    <iframe src="https://acc-status.jonatan.net" class="w-full h-[600px] border-0" loading="lazy"></iframe>
-  </div>
-</div>
 
 </body>
 </html>
