--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </div>
 
   <!-- Main Content -->
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 max-w-7xl mx-auto mt-6 px-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-7xl mx-auto mt-8 px-4">
     <!-- Classifier -->
-    <div id="classifier" class="bg-white rounded-2xl shadow p-6 overflow-auto">
+    <div id="classifier" class="bg-white rounded-2xl shadow p-6 w-full">
       <h2 class="text-xl font-bold mb-4">ACC Driver Classification</h2>
       <!-- INSERT CLASSIFIER BODY -->
       
@@ -274,7 +274,7 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
 
     <!-- Leaderboard -->
-    <div id="leaderboard" class="bg-white rounded-2xl shadow p-6 overflow-auto">
+    <div id="leaderboard" class="bg-white rounded-2xl shadow p-6 w-full">
       <h2 class="text-xl font-bold mb-4">Live Leaderboard</h2>
       <!-- INSERT LEADERBOARD BODY -->
       
