--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.04</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.06</span>
     </div>
     <div class="flex gap-2">
       <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Beginner Times</button>
@@ -31,7 +31,7 @@
 
   <!-- Version Badge -->
   <div class="fixed top-2 left-2 bg-gray-800 text-white text-xs px-3 py-1 rounded-full shadow">
-    Beta 0.1.08
+    Beta 0.0.08
   </div>
 
   <div class="max-w-6xl mx-auto">
@@ -429,24 +429,26 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
   </div>
 
-  
-<!-- Server Status Centered Below -->
-<div class="max-w-7xl mx-auto mt-10 px-4" id="serverStatusPanel">
-  <div class="bg-white rounded-2xl shadow p-6 text-center">
-    <h2 class="text-lg font-bold mb-4">Live ACC Server Status</h2>
-    <div id="serverStatusText" class="text-xl text-blue-700 font-semibold">Fetching server status...</div>
+  <!-- Live Server Status Widget -->
+  <div class="max-w-7xl mx-auto mt-10 px-4 text-center" id="serverStatusPanel">
+    <div class="bg-white rounded-2xl shadow p-6">
+      <h2 class="text-lg font-bold mb-4">Live ACC Server Status</h2>
+      <div id="serverStatusWidget" class="text-lg text-gray-700">
+        Fetching server status...
+      </div>
+    </div>
   </div>
-</div>
 
-
-  <!-- Sponsors Section -->
-  <div class="mt-12 text-center px-4">
-    <h2 class="text-lg font-semibold mb-2">Proudly Sponsored By</h2>
-    <div class="flex justify-center flex-wrap gap-6">
-      <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
-      <img src="fanatec.png" alt="Fanatec" class="h-10">
-      <img src="cdkeys.png" alt="CDKeys" class="h-10">
-      <img src="moza.png" alt="Moza Racing" class="h-10">
+  <!-- Styled Sponsor Block -->
+  <div class="max-w-7xl mx-auto mt-12 px-4">
+    <div class="bg-white rounded-2xl shadow p-6 text-center">
+      <h2 class="text-lg font-semibold mb-4">Proudly Sponsored By</h2>
+      <div class="flex justify-center flex-wrap gap-6">
+        <img src="use_this_simgrid.png" alt="G-Portal" class="h-10">
+        <img src="fanatec.png" alt="Fanatec" class="h-10">
+        <img src="cdkeys.png" alt="CDKeys" class="h-10">
+        <img src="moza.png" alt="Moza Racing" class="h-10">
+      </div>
     </div>
   </div>
 
@@ -455,8 +457,33 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     function scrollToSection(id) {
       document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
     }
-  </script>
-  <script>
+
+    async function updateServerStatus() {
+      const el = document.getElementById("serverStatusWidget");
+      try {
+        const res = await fetch("https://acc-status.jonatan.net/api/v2/acc/status");
+        const data = await res.json();
+        const status = data.status === 1 ? "🟢 Online" :
+                       data.status === 0 ? "🔴 Offline" : "⚪ Unknown";
+
+        const players = data.players ?? "N/A";
+        const servers = data.servers ?? "N/A";
+        const ping = data.ping ?? "N/A";
+
+        el.innerHTML = `
+<div class="font-semibold text-xl mb-2">${status}</div>
+<div>Players: <strong>${players}</strong></div>
+<div>Servers: <strong>${servers}</strong></div>
+<div>Ping: <strong>${ping}ms</strong></div>
+`;
+      } catch (err) {
+        el.innerText = "❌ Failed to load server status.";
+      }
+    }
+
+    updateServerStatus();
+    setInterval(updateServerStatus, 300000);
+
     (function classifierModule() {
       const classificationData = {
   "Monza": { "GT3": ["1:53.7", "1:51.7", "1:49.7", "1:47.7", "1:45.7"] },
@@ -688,19 +715,5 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     loadData();
     })();
   </script>
-  
-<script>
-(function fetchServerStatus() {
-  fetch("https://acc-status.jonatan.net/api")
-    .then(res => res.json())
-    .then(data => {
-      document.getElementById("serverStatusText").innerText = data.status || "Unknown status";
-    })
-    .catch(() => {
-      document.getElementById("serverStatusText").innerText = "Failed to load server status.";
-    });
-})();
-</script>
-
 </body>
 </html>
