--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sticky top-0 z-50 bg-white shadow flex justify-between items-center px-6 py-3">
     <div class="flex items-center gap-4">
       <img src="ifwl_logo.png" alt="IFWL Logo" class="h-10">
-      <span class="text-sm text-gray-600 font-mono">Beta 0.0.06</span>
+      <span class="text-sm text-gray-600 font-mono">Beta 0.0.07</span>
     </div>
     <div class="flex gap-2">
       <button onclick="scrollToSection('leaderboard')" class="bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700">Beginner Times</button>
@@ -429,13 +429,13 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     </div>
   </div>
 
-  <!-- Live Server Status Widget -->
+  <!-- Server Status Button -->
   <div class="max-w-7xl mx-auto mt-10 px-4 text-center" id="serverStatusPanel">
     <div class="bg-white rounded-2xl shadow p-6">
       <h2 class="text-lg font-bold mb-4">Live ACC Server Status</h2>
-      <div id="serverStatusWidget" class="text-lg text-gray-700">
-        Fetching server status...
-      </div>
+      <a href="https://acc-status.jonatan.net" target="_blank" class="inline-block bg-blue-600 text-white text-lg font-semibold px-6 py-3 rounded shadow hover:bg-blue-700 transition">
+        Click here to view live ACC server status →
+      </a>
     </div>
   </div>
 
@@ -457,32 +457,6 @@ fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GU
     function scrollToSection(id) {
       document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
     }
-
-    async function updateServerStatus() {
-      const el = document.getElementById("serverStatusWidget");
-      try {
-        const res = await fetch("https://acc-status.jonatan.net/api/v2/acc/status");
-        const data = await res.json();
-        const status = data.status === 1 ? "🟢 Online" :
-                       data.status === 0 ? "🔴 Offline" : "⚪ Unknown";
-
-        const players = data.players ?? "N/A";
-        const servers = data.servers ?? "N/A";
-        const ping = data.ping ?? "N/A";
-
-        el.innerHTML = `
-<div class="font-semibold text-xl mb-2">${status}</div>
-<div>Players: <strong>${players}</strong></div>
-<div>Servers: <strong>${servers}</strong></div>
-<div>Ping: <strong>${ping}ms</strong></div>
-`;
-      } catch (err) {
-        el.innerText = "❌ Failed to load server status.";
-      }
-    }
-
-    updateServerStatus();
-    setInterval(updateServerStatus, 300000);
 
     (function classifierModule() {
       const classificationData = {
